# ryze

./: .cz.toml  .gitignore  .gitmodules  BUILD.bazel  CHANGELOG.md  Dockerfile  Makefile  README.Docker.md  README.md  WORKSPACE  buf.yaml  compose.yaml  deps.bzl  go.mod  go.sum  main.go
.cursor/rules/: go_clean_architecture_ddd.mdc  go_kit_architecture.mdc  taskmaster.mdc
.github/workflows/: docker.yaml  go.yaml  golangci-lint.yml  helm.yaml  pr_agent.yml  production.yaml  release.yaml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
adapter/block/grpc/: impl.go  main_test.go  wire.go  wire_gen.go
adapter/block/scan/: impl.go  injector.go  main_test.go  wire.go  wire_gen.go
adapter/block/scanner/: impl.go  injector.go  main_test.go  wire.go  wire_gen.go
adapter/block/wirex/: injector.go
adapter/blockscanner/: impl.go  injector.go  main_test.go  wire.go  wire_gen.go
adapter/cmd/: get.go  root.go
adapter/cmd/get/: blocks.go
adapter/daemon/: grpc_server.go  impl.go  injector.go  wire.go  wire_gen.go
adapter/platform/: grpc_server.go  impl.go  injector.go  wire.go  wire_gen.go
adapter/platform/grpc/: impl.go  main_test.go  wire.go  wire_gen.go
adapter/platform/wirex/: injector.go
adpater/block/scan/: impl.go  wire.go  wire_gen.go
adpater/block/wirex/: injector.go
api/block/scan/: block_scan_docs.go  block_scan_swagger.json  block_scan_swagger.yaml
api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
app/domain/account/: account_service.go  wire.go
app/domain/account/biz/: account_service.go
app/domain/block/: block_grpc_client.go  block_service.go  block_service_external_test.go  block_service_test.go  block_ton_service.go  wire.go  wire_gen.go
app/domain/block/biz/: block_grpc_client.go  block_service.go  block_service_external_test.go  block_service_test.go  wire.go  wire_gen.go
app/domain/network/: network_service.go  wire.go
app/domain/network/biz/: network_service.go
app/domain/transaction/: transaction_grpc_client.go  transaction_onchain_service.go  transaction_service.go  wire.go
app/domain/transaction/biz/: transaction_service.go
app/infra/configx/: app.go  config.go  network.go
app/infra/otelx/: otelx.go
app/infra/storage/mongodbx/: block_repo.go  block_repo_external_test.go  block_repo_test.go  mongodbx.go
app/infra/storage/pgx/: pgx.go  transaction_repo.go
app/infra/tonx/: client.go  utils.go
app/infra/transports/grpcx/: client.go  client_external_test.go  event_bus.go  server.go  server_test.go
app/infra/transports/httpx/: server.go  server_test.go
app/usecase/event/: found_block_handler.go  found_block_handler_v2.go
cmd/: get.go  recover.go  root.go  scan.go  start.go  sync.go
cmd/daemon/: grpc_server.go  impl.go  injector.go  main_test.go  wire.go  wire_gen.go
cmd/get/: cmd.go  stats.go
cmd/listener/block/: BUILD.bazel  main.go  service.go  wire.go  wire_gen.go
cmd/platform/: impl.go  injector.go  main_test.go  wire_gen.go
cmd/restful/: BUILD.bazel  main.go  wire_gen.go
cmd/restful/app/: BUILD.bazel  main.go  service.go  wire.go  wire_gen.go
configs/: default.yaml  example.yaml
deployments/charts/ryze/: Chart.yaml  values.yaml
deployments/charts/ryze/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
entity/domain/account/biz/: account.pb.go  account.proto  account_grpc.pb.go  account_grpc_mock.pb.go
entity/domain/account/model/: account.go  account.pb.go  account.proto  account_grpc.pb.go  account_grpc_mock.pb.go
entity/domain/block/biz/: agg_block.go  (+4 more)
internal/adapter/listener/block/: BUILD.bazel  impl.go
internal/adapter/restful/: BUILD.bazel  restful.go
internal/adapter/restful/v1/: BUILD.bazel  v1.go
internal/adapter/restful/v1/blocks/: BUILD.bazel  blocks.go  get_block_by_hash.go  get_blocks_list.go
internal/app/domain/block/biz/: BUILD.bazel  impl.go  impl_test.go  wire.go  wire_gen.go
internal/app/domain/block/biz/repo/: BUILD.bazel  impl.go  impl_test.go  interface.go  mock_interface.go  testdata.go  wire.go  wire_gen.go
internal/app/domain/block/biz/repo/dao/: BUILD.bazel  dao.go  dao_test.go
internal/app/repo/: block.go  mock_block.go
internal/domain/account/: account_service.go
internal/domain/block/: block_grpc_client.go  block_service.go  wire.go
internal/domain/event/: base_event.go  bus.go  event.go
internal/domain/network/: network_service.go
internal/domain/transaction/: transaction_grpc_client.go  transaction_service.go  wire.go
internal/endpoint/block/: endpoint.go
internal/infra/configx/: app.go
internal/infra/otelx/: otelx.go
internal/infra/stub/: block_repository_inmemory.go  block_scanner_dummy.go
internal/pkg/config/: BUILD.bazel  config.go  viper.go  viper_test.go
internal/pkg/errorx/: 400.go  500.go  BUILD.bazel
internal/pkg/httpx/: BUILD.bazel  server.go
internal/pkg/log/: BUILD.bazel  log.go
internal/pkg/transports/kafkax/: BUILD.bazel  writer.go
internal/repo/: mock_block.go
internal/service/block/: middleware.go  mock_service.go  service.go
internal/shared/configx/: config.go
internal/shared/messaging/: memory.go
internal/shared/otelx/: otelx.go
pb/domain/account/: account.proto
pb/domain/block/: block.proto
pb/domain/transaction/: transaction.proto
pkg/adapter/: BUILD.bazel  adapter.go
pkg/adapters/: BUILD.bazel  adapters.go
pkg/adapterx/: adapterx.go
pkg/app/: BUILD.bazel
pkg/cmdx/: cmdx.go
pkg/contextx/: BUILD.bazel  contextx.go  middleware.go
pkg/cors/: BUILD.bazel
pkg/entity/domain/block/model/: BUILD.bazel  block.go  block.pb.go
pkg/entity/domain/transaction/model/: BUILD.bazel  transaction.pb.go
pkg/er/: BUILD.bazel  er.go  middlewares.go
pkg/eventx/: eventx.go  handler.go  memory.go
pkg/httpx/: BUILD.bazel
pkg/netx/: BUILD.bazel
pkg/persistence/: repository.go
pkg/response/: BUILD.bazel  response.go  response_test.go
pkg/responsex/: middleware.go
pkg/usecase/: interfaces.go
scripts/migrations/: 000001_create_blocks_table.up.sql
(+109 files in other folders)
