load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

# gazelle:prefix github.com/blackhorseya/ryze
# gazelle:proto disable_global

gazelle(name = "gazelle")

container_image(
    name = "ryze-restful-app-image",
    base = "@alpine_linux_amd64//image",
    directory = "/workspace",
    entrypoint = ["./app"],
    files = ["//cmd/restful/app"],
    workdir = "/workspace",
)

container_push(
    name = "push-ryze-restful-app-image",
    format = "Docker",
    image = ":ryze-restful-app-image",
    registry = "gcr.io",
    repository = "sean-side/ryze-restful-app",
    tag = "$(VERSION)",
)

container_image(
    name = "ryze-listener-block-image",
    base = "@alpine_linux_amd64//image",
    directory = "/workspace",
    entrypoint = ["./block"],
    files = ["//cmd/listener/block"],
    workdir = "/workspace",
)

container_push(
    name = "push-ryze-listener-block-image",
    format = "Docker",
    image = ":ryze-listener-block-image",
    registry = "gcr.io",
    repository = "sean-side/ryze-listener-block",
    tag = "$(VERSION)",
)
