load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "contextx",
    srcs = ["contextx.go"],
    importpath = "github.com/blackhorseya/ryze/pkg/contextx",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
