load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "block_lib",
    srcs = [
        "main.go",
        "service.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/ryze/cmd/listener/block",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapter/listener/block",
        "//internal/app/domain/block/biz",
        "//internal/app/domain/block/biz/repo",
        "//internal/pkg/config",
        "//internal/pkg/log",
        "//internal/pkg/storage/mariadb",
        "//internal/pkg/transports/kafkax",
        "//pkg/adapter",
        "//pkg/app",
        "@com_github_google_wire//:wire",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "block",
    embed = [":block_lib"],
    visibility = ["//visibility:public"],
)
