load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app_lib",
    srcs = [
        "main.go",
        "service.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/ryze/cmd/restful/app",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/adapter/restful",
        "//internal/app/domain/block/biz",
        "//internal/app/domain/block/biz/repo",
        "//internal/pkg/config",
        "//internal/pkg/httpx",
        "//internal/pkg/log",
        "//internal/pkg/storage/mariadb",
        "//internal/pkg/transports/kafkax",
        "//pkg/adapter",
        "//pkg/app",
        "//pkg/httpx",
        "@com_github_google_wire//:wire",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)
