load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = ["restful.go"],
    importpath = "github.com/blackhorseya/ryze/internal/adapter/restful",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/docs",
        "//internal/adapter/restful/v1:restful",
        "//pkg/adapter",
        "//pkg/contextx",
        "//pkg/cors",
        "//pkg/entity/domain/block/biz",
        "//pkg/er",
        "@com_github_gin_contrib_zap//:zap",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
