load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "block",
    srcs = ["impl.go"],
    importpath = "github.com/blackhorseya/ryze/internal/adapter/listener/block",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/adapter",
        "@com_github_google_wire//:wire",
    ],
)
