load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kafkax",
    srcs = ["writer.go"],
    importpath = "github.com/blackhorseya/ryze/internal/pkg/transports/kafkax",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_wire//:wire",
        "@com_github_segmentio_kafka_go//:kafka-go",
        "@com_github_segmentio_kafka_go//sasl/plain",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
