load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "blocks",
    srcs = [
        "blocks.go",
        "get_blocks_list.go",
    ],
    importpath = "github.com/blackhorseya/ryze/internal/adapter/restful/v1/blocks",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/errorx",
        "//pkg/contextx",
        "//pkg/entity/domain/block/biz",
        "//pkg/entity/domain/block/model",
        "//pkg/response",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
