load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "biz",
    srcs = [
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/ryze/internal/app/domain/block/biz",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/contextx",
        "//pkg/entity/domain/block/biz",
        "//pkg/entity/domain/block/model",
        "@com_github_google_wire//:wire",
    ],
)
