load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "impl.go",
        "interface.go",
        "mock_interface.go",
    ],
    importpath = "github.com/blackhorseya/ryze/internal/app/domain/block/biz/repo",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/contextx",
        "//pkg/entity/domain/block/model",
        "@com_github_golang_mock//gomock",
    ],
)
