load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "impl.go",
        "interface.go",
        "mock_interface.go",
    ],
    importpath = "github.com/blackhorseya/ryze/internal/app/domain/block/biz/repo",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/contextx",
        "//pkg/entity/domain/block/model",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//ethclient",
        "@com_github_golang_mock//gomock",
        "@com_github_google_wire//:wire",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
    ],
)
