load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dao",
    srcs = ["dao.go"],
    importpath = "github.com/blackhorseya/ryze/internal/app/domain/block/biz/repo/dao",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/entity/domain/block/model",
        "@com_github_ethereum_go_ethereum//common",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "dao_test",
    srcs = ["dao_test.go"],
    embed = [":dao"],
    deps = [
        "//pkg/entity/domain/block/model",
        "@com_github_ethereum_go_ethereum//common",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
